<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/profile">

        <Preference
            android:key="edit_profile"
            android:title="@string/edit_profile"
            android:summary="@string/edit_profile_summary">
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/session">

        <CheckBoxPreference
            android:key="keep_signed_in"
            android:title="@string/keep_signed_in"
            android:summary="@string/keep_signed_in_summary"
            android:defaultValue="true">

        </CheckBoxPreference>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications">

        <CheckBoxPreference
            android:key="checkbox_authorize"
            android:title="@string/authorize_notifications"
            android:summary="@string/authorize_notifications_summary"
            android:defaultValue="false">

        </CheckBoxPreference>
        <CheckBoxPreference
            android:key="checkbox_sound"
            android:title="@string/activate_sound"
            android:summary="@string/activate_sound_summary"
            android:defaultValue="false">

        </CheckBoxPreference>
        <EditTextPreference
            android:key="edit_timer"
            app:title="@string/service_timer"
            android:summary="@string/service_timer_summary"
            android:inputType="number"
            android:defaultValue="60"></EditTextPreference>

    </PreferenceCategory>
</PreferenceScreen>