    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="co.edu.udea.compumovil.gr10_20172.lab4.NewApartmentFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_apt"
                    android:layout_width="135dp"
                    android:layout_height="122dp"
                    android:onClick="selectImage"
                    app:srcCompat="@android:drawable/alert_dark_frame" />

                <EditText
                    android:id="@+id/name_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="text|textCapWords|textNoSuggestions"
                    tools:layout_editor_absoluteX="151dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/type_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/type"
                    android:inputType="text|textCapWords"
                    tools:layout_editor_absoluteX="151dp"
                    tools:layout_editor_absoluteY="59dp" />

                <EditText
                    android:id="@+id/price_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="textNoSuggestions|numberDecimal"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="191dp" />

                <EditText
                    android:id="@+id/area_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/area"
                    android:inputType="textNoSuggestions|numberDecimal"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="234dp" />

                <EditText
                    android:id="@+id/bedrooms_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bedrooms"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="267dp" />

                <EditText
                    android:id="@+id/bathrooms_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/bathrooms"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="310dp" />

                <EditText
                    android:id="@+id/description_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="text|textCapSentences|textNoSuggestions"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="353dp" />

                <EditText
                    android:id="@+id/location_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="textNoSuggestions|textPostalAddress"
                    tools:layout_editor_absoluteX="153dp"
                    tools:layout_editor_absoluteY="396dp" />

                <Button
                    android:id="@+id/new_apt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onNewClick"
                    android:text="@string/accept" />

            </LinearLayout>
        </ScrollView>

</LinearLayout>
